Update distros, so centos8 and ubuntu aren't replicated.
Add Java build to new workflow
Split spelling out into it's own workflow to allow selective restart.

Signed-off-by: Ashley Pittman <ashley.m.pittman@intel.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        distro: [centos.7, centos.8, leap.15, ubuntu.20.04]
+        distro: [centos.7, leap.15]
         compiler: [gcc, clang]
     steps:
     - name: Checkout code
@@ -36,15 +36,3 @@ jobs:
       run: docker build . -f utils/docker/Dockerfile.${{ matrix.distro }}
                           --build-arg COMPILER=${{ matrix.compiler }}
                           --build-arg DEPS_JOBS=8
-
-  Spelling:
-    runs-on: ubuntu-20.04
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-    - name: Run check
-      uses: codespell-project/actions-codespell@master
-      with:
-        skip: ./src/control/vendor,./.git
-        ignore_words_file: ci/codespell.ignores
-        builtin: clear,rare,informal,names,en-GB_to_en-US
