Try and build using main/master of all deps.
Signed-off-by: Ashley Pittman <ashley.m.pittman@intel.com>

--- a/utils/docker/Dockerfile.ubuntu.20.04
+++ b/utils/docker/Dockerfile.ubuntu.20.04
@@ -48,6 +48,7 @@ RUN apt-get -y update && \
         libyaml-dev \
         locales \
         maven \
+        meson \
         numactl \
         openjdk-8-jdk \
         pandoc \
