--- a/utils/build.config
+++ b/utils/build.config
@@ -2,13 +2,13 @@
 component=daos
 
 [commit_versions]
-ARGOBOTS = v1.1
-PMDK = 1.9.2
-ISAL = v2.30.0
-ISAL_CRYPTO = v2.23.0
+ARGOBOTS = main
+PMDK = master
+ISAL = master
+ISAL_CRYPTO = master
 SPDK = v20.01.2
-OFI = v1.12.0
-OPENPA = v1.0.4
-MERCURY = v2.0.1rc1
-PSM2 = PSM2_11.2.78
-PROTOBUFC = v1.3.3
+OFI = main
+PSM2 = master
+OPENPA = master
+MERCURY = master
+PROTOBUFC = master
