--- a/utils/build.config
+++ b/utils/build.config
@@ -6,7 +6,7 @@ ARGOBOTS = main
 PMDK = master
 ISAL = master
 ISAL_CRYPTO = master
-SPDK = v20.01.2
+SPDK = master
 OFI = main
 PSM2 = master
 OPENPA = master
