Back out spdk change.
Signed-off-by: Ashley Pittman <ashley.m.pittman@intel.com>

--- a/utils/build.config
+++ b/utils/build.config
@@ -6,7 +6,7 @@ ARGOBOTS = main
 PMDK = master
 ISAL = master
 ISAL_CRYPTO = master
-SPDK = master
+SPDK = v20.01.2
 OFI = main
 PSM2 = master
 OPENPA = master
