Enable testing on branch.
Skip-func-test: true

Signed-off-by: Ashley Pittman <ashley.m.pittman@intel.com>

--- a/.github/workflows/landing-builds.yml
+++ b/.github/workflows/landing-builds.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - master
       - release/*
+      - gha-fewer-builds
 
 jobs:
 
@@ -205,7 +206,7 @@ jobs:
           - distro: centos.8
             base: centos.8
             with: centos:8
-	  - distro: alma
+          - distro: alma
             base: centos.8
             with: almalinux:8
             java: yes
