--- a/.github/workflows/landing-builds.yml
+++ b/.github/workflows/landing-builds.yml
@@ -132,16 +132,19 @@ jobs:
           - distro: ubuntu.20.04
             base: ubuntu.20.04
             with: ubuntu.20.04
+	    java: yes
           - distro: rocky
             base: centos.8
             with: rockylinux/rockylinux:8
-            java: yes
+	    java: yes
           - distro: fedora
             base: centos.8
             with: fedora:35
+	    java: no
           - distro: leap.15
             base: leap.15
             with: leap.15
+	    java: yes
     env:
       DEPS_JOBS: 10
       BASE_DISTRO: ${{ matrix.with }}
@@ -202,18 +205,15 @@ jobs:
           - distro: centos.7
             base: centos.7
             with: centos.7
-            java: yes
           - distro: centos.8
             base: centos.8
             with: centos:8
           - distro: alma
             base: centos.8
             with: almalinux:8
-            java: yes
     env:
       DEPS_JOBS: 10
       BASE_DISTRO: ${{ matrix.with }}
-      DAOS_JAVA_BUILD: ${{ matrix.java }}
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
@@ -234,7 +234,7 @@ jobs:
       run: docker build . --file utils/docker/Dockerfile.${{ matrix.base }}
                           --build-arg DEPS_JOBS
                           --build-arg BASE_DISTRO
-                          --build-arg DAOS_JAVA_BUILD
+                          --build-arg DAOS_JAVA_BUILD=yes
                           --build-arg COMPILER=clang
     - name: Build debug in docker with clang.
       run: docker build . --file utils/docker/Dockerfile.${{ matrix.base }}
